--- a/package.json
+++ b/package.json
@@ -10,25 +10,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "firebase emulators:start --only functions",
     "shell": "firebase functions:shell",
-    "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log",
-    "build": "esbuild index.js --bundle --platform=node --outfile=main.js"
+    "start": "npm run shell"
   },
   "author": "omar",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "firebase": "^9.22.0",
-    "firebase-functions": "^4.7.0",
-    "google-auth-library": "^8.8.0",
-    "hono": "^4.2.1",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.3"
-  },
-  "devDependencies": {
-    "esbuild": "0.20.0",
-    "wrangler": "^3.44.0"
-  }
+  "license": "ISC"
 }
