--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,5 @@
 {
       "version": 2,
-      "builds": [
-        {
-          "src": "./index.js",
-          "use": "@vercel/node"
-        }
-      ],
+      "buildCommand": "echo 'skipping build with vercel.json'"
       "rewrites": [{ "source": "/(.*)", "destination": "/" }]
     }
